Version 2.02.178 - 
=====================================
  Add AIO_SUPPORTED_CODE_PATH to indicate whether AIO may be used.
  Configure ensures /usr/bin dir is checked for dmpd tools.
  Restore pvmove support for wide-clustered active volumes (2.02.177).
  Avoid non-exclusive activation of exclusive segment types.
  Fix trimming sibling PVs when doing a pvmove of raid subLVs.
  Preserve exclusive activation during thin snaphost merge.
  Suppress some repeated reads of the same disk data at the device layer.
  Avoid exceeding array bounds in allocation tag processing.
  Refactor metadata reading code to use callback functions.
  Move memory allocation for the key dev_reads into the device layer.

Version 2.02.177 - 18th December 2017
=====================================
  When writing text metadata content, use complete 4096 byte blocks.
  Change text format metadata alignment from 512 to 4096 bytes.
  When writing metadata, consistently skip mdas marked as failed.
  Refactor and adjust text format metadata alignment calculation.
  Fix python3 path in lvmdbusd to use value detected by configure.
  Reduce checks for active LVs in vgchange before background polling.
  Ensure _node_send_message always uses clean status of thin pool.
  Fix lvmlockd to use pool lock when accessing _tmeta volume.
  Report expected sanlock_convert errors only when retries fail.
  Avoid blocking in sanlock_convert on SH to EX lock conversion.
  Deactivate missing raid LV legs (_rimage_X-missing_Y_Z) on decativation.
  Skip read-modify-write when entire block is replaced.
  Categorise I/O with reason annotations in debug messages.
  Allow extending of raid LVs created with --nosync after a failed repair.
  Command will lock memory only when suspending volumes.
  Merge segments when pvmove is finished.
  Remove label_verify that has never been used.
  Ensure very large numbers used as arguments are not casted to lower values. 