@@ -1250,6 +1250,8 @@ int dev_cache_exit(void)
 	struct btree_iter *b;
 	int num_open = 0;
 
+	dev_async_exit();
+
 	if (_cache.names)
 		if ((num_open = _check_for_open_devices(1)) > 0)
 			log_error(INTERNAL_ERROR "%d device(s) were left open and have been closed.", num_open);
